update LeetCode Weekly Contest 454

--- a/algorithm/LeetCode/[Easy] 1260. Shift 2D Grid.md
+++ b/algorithm/LeetCode/[Easy] 1260. Shift 2D Grid.md
@@ -141,3 +141,32 @@ public:
     }
 };
 ```
+
+**Solution 4: (Array)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 18.29 MB, Beats 43.60%
+```
+```c++
+class Solution {
+public:
+    vector<vector<int>> shiftGrid(vector<vector<int>>& grid, int k) {
+        int m = grid.size(), n = grid[0].size(), r = m - 1 - ((k-1)/n)%m, c = n - 1 - (k-1)%n, ck = 0, i, j;
+        vector<vector<int>> ans(m, vector<int>(n));
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                ans[i][j] = grid[r][c];
+                c += 1;
+                if (c == n) {
+                    c = 0;
+                    r += 1;
+                    if (r == m) {
+                        r = 0;
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
