--- a/algorithm/LeetCode/[Easy] 1768. Merge Strings Alternately.md
+++ b/algorithm/LeetCode/[Easy] 1768. Merge Strings Alternately.md
@@ -76,3 +76,27 @@ public:
     }
 };
 ```
+
+**Solution 3: (String)**
+```
+Runtime: 3 ms, Beats 40.17%
+Memory: 8.20 MB, Beats 99.91%
+```
+```c++
+class Solution {
+public:
+    string mergeAlternately(string word1, string word2) {
+        int m = word1.size(), n = word2.size(), i, turn = 0;
+        string ans;
+        for (i = 0; i < max(m, n); i ++) {
+            if (i < m) {
+                ans += word1[i];
+            }
+            if (i < n) {
+                ans += word2[i];
+            }
+        }
+        return ans;
+    }
+};
+```
