--- a/algorithm/LeetCode/[Easy] 2566. Maximum Difference by Remapping a Digit.md
+++ b/algorithm/LeetCode/[Easy] 2566. Maximum Difference by Remapping a Digit.md
@@ -88,3 +88,62 @@ public:
     }
 };
 ```
+
+**Solution 3: (String, Greedy)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.17 MB, Beats 64.15%
+```
+```c++
+class Solution {
+public:
+    int minMaxDifference(int num) {
+        string s = to_string(num), sa = s, sb = s;
+        int n = s.size(), i, j;
+        for (i = 0; i < n; i ++) {
+            if (s[i] != '9') {
+                for (j = 0; j < n; j ++) {
+                    if (sa[j] == s[i]) {
+                        sa[j] = '9';
+                    }
+                }
+                break;
+            }
+        }
+        for (i = 0; i < n; i ++) {
+            if (s[i] != '0') {
+                for (j = 0; j < n; j ++) {
+                    if (sb[j] == s[i]) {
+                        sb[j] = '0';
+                    }
+                }
+                break;
+            }
+        }
+        return stoi(sa) - stoi(sb);
+    }
+};
+```
+
+**Solution 4: (String, Greedy)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.04 MB, Beats 84.91%
+```
+```c++
+class Solution {
+public:
+    int minMaxDifference(int num) {
+        string s = to_string(num);
+        string t = s;
+        size_t pos = s.find_first_not_of('9');
+        if (pos != string::npos) {
+            char a = s[pos];
+            replace(s.begin(), s.end(), a, '9');
+        }
+        char b = t[0];
+        replace(t.begin(), t.end(), b, '0');
+        return stoi(s) - stoi(t);
+    }
+};
+```
