--- a/algorithm/LeetCode/[Hard[ 1944. Number of Visible People in a Queue.md
+++ b/algorithm/LeetCode/[Hard[ 1944. Number of Visible People in a Queue.md
@@ -60,22 +60,24 @@ class Solution:
 
 **Solution 2: (Stack, Monotonic decreasing stack)**
 ```
-Runtime: 131 ms
-Memory: 84.4 MB
+Runtime: 15 ms, Beats 54.44%
+Memory: 88.70 MB, Beats 59.32%
 ```
 ```c++
 class Solution {
 public:
     vector<int> canSeePersonsCount(vector<int>& heights) {
-        int n = heights.size();
+        int n = heights.size(), i;
         stack<int> stk;
         vector<int> ans(n);
-        for (int i = n-1; i >= 0; i --) {
+        for (i = n-1; i >= 0; i--) {
             while (stk.size() && stk.top() < heights[i]) {
                 stk.pop();
                 ans[i] += 1;
             }
-            ans[i] += stk.size() ? 1 : 0;
+            if (stk.size()) {
+                ans[i] += 1;
+            }
             stk.push(heights[i]);
         }
         return ans;
