--- a/algorithm/LeetCode/[Hard] 3445. Maximum Difference Between Even and Odd Frequency II.md
+++ b/algorithm/LeetCode/[Hard] 3445. Maximum Difference Between Even and Odd Frequency II.md
@@ -51,69 +51,104 @@ The input is generated that at least one substring has a character with an even 
 
 # Submissions
 ---
-**Solution 1: (Prefis Sum)**
+**Solution 1: (Prefis Sum, Two Pointers, Brute Force)**
+
+    ------|----k-----|------
+          ^l         ^r
+   ^^^^^^^^
+    min pre
+         pre_a
+         pre_b
+   ^^^^^^^^^^^^^^^^^^^
+           cur
+                     cnt_a
+                     cnt_b
+status
+      %2     %2 |
+   cnt_a  cnt_b | min(cnt_a - cnt_b)   
+       0      0 | 
+       0      1 | 
+       1      0 | 
+       1      1 | 
+        ans = max(ans, cur - min pre = cur^0b10)
+-------------------------------------
+idx        -1 0 1 2 3 4
+              1 2 2 3 3, k = 4
+              ^l      ^r
+a = 1
+b = 2
+    cnt_a     1 
+    cnt_b       1 2
+    pre_a   0 1
+    pre_b   0         
+    l_sts   0 2      
+    r_sts     2 3 2 2 2 
+              -------
+                -------
+    best 0          0
+         1
+         2           -1
+         3
+    ans            -1-1
+-------------------------------------
+idx         -1 0 1 2 3 4 5 6
+               1 1 2 2 2 1 1, k = 3
+                       ^l  ^r
+a=1
+b=2
+    cnt_a      1 2       3 4
+    cnt_b          1 2 3
+    pre_a    0 1 2
+    pre_b    0     1 2 3
+    l_sts    0 2 0 1 0 1
+    r_sts      2 0 1 0 1 3 1
+    best 0         0     0
+         1             1-1
+         2           1
+         3
+    ans           -1-1 1 1 1
+               -----
+                 ----- 
 ```
-Runtime: 1470 ms, Beats 18.18%
-Memory: 526.21 MB, Beats 18.18%
+Runtime: 30 ms, Beats 96.15%
+Memory: 11.48 MB, Beats 98.72%
 ```
 ```c++
 class Solution {
-    int func(string & s, int k, char & oddChar, char & evenChar) {
-        const int n = (int)s.size();
-        vector<vector<int>> cnt(n, vector<int>(2));
-        int oddCharCnt = 0, evenCharCnt = 0;
-        vector<int> T(n);
-        for (int i = 0; i < n; ++i) {
-            if (s[i] == oddChar) oddCharCnt++;
-            else if (s[i] == evenChar) evenCharCnt++;
-            cnt[i][0] = oddCharCnt, cnt[i][1] = evenCharCnt;
-            if (oddCharCnt % 2 == 0 && evenCharCnt % 2 == 1) T[i] = 0;
-            else if (oddCharCnt % 2 == 0 && evenCharCnt % 2 == 0) T[i] = 1;
-            else if (oddCharCnt % 2 == 1 && evenCharCnt % 2 == 0) T[i] = 2;
-            else T[i] = 3;
-        }
-        int ans = -1e9, curr = 0, l = 0;
-
-        auto getOppositeIndex  = [&] (int t) {
-            if (t == 0) return 3;
-            if (t == 1) return 2;
-            if (t == 2) return 1;
-            return 0;
-        };
-
-        auto isPossible = [&] (int i, int j) {
-            int oddCharCnt = cnt[i][0] - (j == -1 ? 0 : cnt[j][0]);
-            int evenCharCnt = cnt[i][1] - (j == -1 ? 0 : cnt[j][1]);
-            return oddCharCnt > 0 && evenCharCnt > 0 && oddCharCnt % 2 == 1 && evenCharCnt % 2 == 0 && i - j >= k;
-        };
-
-        vector<int> minimumCanRemove(4, 1e9);
-        queue<int> q[4];
-        for (int i = 0; i < n; ++i) {
-            int curr = cnt[i][0] - cnt[i][1];
-            while(i - l >= k) {
-                q[T[l]].push(l);
-                ++l;
-            }
-            int oppositeType = getOppositeIndex(T[i]);
-            while(!q[oppositeType].empty() && isPossible(i, q[oppositeType].front())) {
-                int prevIdx = q[oppositeType].front();
-                q[oppositeType].pop();
-                minimumCanRemove[oppositeType] = min(minimumCanRemove[oppositeType], cnt[prevIdx][0] - cnt[prevIdx][1]);
-            }
-            ans = max(ans, curr - minimumCanRemove[oppositeType]);
-            if (T[i] == 2 && isPossible(i, -1)) ans = max(ans, curr);
-        }
-
-        return ans;
-    }
 public:
     int maxDifference(string s, int k) {
+        auto getStatus = [](int cnt_a, int cnt_b) -> int {
+            return ((cnt_a & 1) << 1) | (cnt_b & 1);
+        };
+
+        int n = s.size();
         int ans = INT_MIN;
-        for (char i = '0'; i <= '4'; ++i) {
-            for (char j = '0'; j <= '4'; ++j) {
-                if (i == j) continue;
-                ans = max(ans, func(s, k, i, j));
+        for (char a = '0'; a <= '4'; ++a) {
+            for (char b = '0'; b <= '4'; ++b) {
+                if (a == b) {
+                    continue;
+                }
+                int best[4] = {INT_MAX, INT_MAX, INT_MAX, INT_MAX};
+                int cnt_a = 0, cnt_b = 0;
+                int prev_a = 0, prev_b = 0;
+                int left = -1;
+                for (int right = 0; right < n; ++right) {
+                    cnt_a += (s[right] == a);
+                    cnt_b += (s[right] == b);
+                    while (right - left >= k && cnt_b - prev_b >= 2) {
+                        int left_status = getStatus(prev_a, prev_b);
+                        best[left_status] =
+                            min(best[left_status], prev_a - prev_b);
+                        ++left;
+                        prev_a += (s[left] == a);
+                        prev_b += (s[left] == b);
+                    }
+                    int right_status = getStatus(cnt_a, cnt_b);
+                    if (best[right_status ^ 0b10] != INT_MAX) {
+                        ans =
+                            max(ans, cnt_a - cnt_b - best[right_status ^ 0b10]);
+                    }
+                }
             }
         }
         return ans;
