--- a/algorithm/LeetCode/[Easy] 3423. Maximum Difference Between Adjacent Elements in a Circular Array.md
+++ b/algorithm/LeetCode/[Easy] 3423. Maximum Difference Between Adjacent Elements in a Circular Array.md
@@ -38,14 +38,14 @@ The adjacent elements nums[0] and nums[1] have the maximum absolute difference o
 ---
 **Solution 1: (Brute Force)**
 ```
-Runtime: 0 ms
-Memory: 30.43 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 30.54 MB, Beats 23.04%
 ```
 ```c++
 class Solution {
 public:
     int maxAdjacentDistance(vector<int>& nums) {
-        int n = nums.size(), i, ans = INT_MIN;
+        int n = nums.size(), i, ans = 0;
         for (i = 0; i < n; i ++) {
             ans = max(ans, abs(nums[i] - nums[(i+1)%n]));
         }
