update LeetCode Biweekly Contest 159

--- a/algorithm/LeetCode/[Easy] 1021. Remove Outermost Parentheses.md
+++ b/algorithm/LeetCode/[Easy] 1021. Remove Outermost Parentheses.md
@@ -102,3 +102,38 @@ char * removeOuterParentheses(char * s){
     return s;
 }
 ```
+
+**Solution 3: (Counter)**
+
+     (()())(())
+     1222211221
+       1 10  10
+      xxxx  xx
+
+```
+Runtime: 0 ms, Beats 100.00%`
+Memory: 8.98 MB, Beats 53.77%
+```
+```c++
+class Solution {
+public:
+    string removeOuterParentheses(string s) {
+        int n = s.size(), cnt = 0;
+        string ans;
+        for (auto c: s) {
+            if (c == '(') {
+                cnt += 1;
+                if (cnt > 1) {
+                    ans += c;
+                }
+            } else {
+                if (cnt > 1) {
+                    ans += c;
+                }
+                cnt -= 1;
+            }
+        }
+        return ans;
+    }
+};
+```
