--- a/algorithm/LeetCode/[Easy] 2016. Maximum Difference Between Increasing Elements.md
+++ b/algorithm/LeetCode/[Easy] 2016. Maximum Difference Between Increasing Elements.md
@@ -54,3 +54,22 @@ class Solution:
             mi = min(mi, n)
         return diff 
 ```
+
+**Solution 2: (Greedy)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 11.77 MB, Beats 92.10%
+```
+```c++
+class Solution {
+public:
+    int maximumDifference(vector<int>& nums) {
+        int n = nums.size(), i, a = nums[0], ans = INT_MIN;
+        for (i = 1; i < n; i ++) {
+            ans = max(ans, nums[i] - a);
+            a = min(a, nums[i]);
+        }
+        return ans > 0 ? ans : -1;
+    }
+};
+```
