--- a/algorithm/LeetCode/[Easy] 2138. Divide a String Into Groups of Size k.md
+++ b/algorithm/LeetCode/[Easy] 2138. Divide a String Into Groups of Size k.md
@@ -75,31 +75,21 @@ class Solution:
 
 **Solution 3: (String)**
 ```
-Runtime: 2 ms
-Memory Usage: 6.8 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 9.69 MB, Beats 93.73%
 ```
 ```c++
 class Solution {
 public:
     vector<string> divideString(string s, int k, char fill) {
-        vector<string> v;
-        for(int i=0;i<s.size();i=i+k)
-        {
-            string t=s.substr(i,k); // make substring of size atmost k
-           
-            if(t.size()==k)  // if size if k then push
-            {
-                v.push_back(t);
-                continue;
-            }
-			
-            int l=t.size();  // if it is the last group and size if less than k
-            for(int j=0;j<(k-l);j++)  // add fill char to t to make size k
-                t+=fill;
-				
-            v.push_back(t);
+        int n = s.length(), i = 0;
+        vector<string> ans;
+        while (i < n) {
+            ans.push_back(s.substr(i, k));
+            i += k;
         }
-        return v;
+        ans.back() += string(k - ans.back().size(), fill);
+        return ans;
     }
 };
 ```
