update LeetCode Weekly Contest 456

--- a/algorithm/LeetCode/[Easy] 1002. Find Common Characters.md
+++ b/algorithm/LeetCode/[Easy] 1002. Find Common Characters.md
@@ -93,33 +93,29 @@ char ** commonChars(char ** words, int wordsSize, int* returnSize){
 
 **Solution 3: (Counter)**
 ```
-Runtime: 4 ms
-Memory: 11.41 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 12.62 MB, Beats 36.66%
 ```
 ```c++
 class Solution {
 public:
     vector<string> commonChars(vector<string>& words) {
-        int pre[26], cur[26];
-        pre[0] = -1;
-        for (auto w: words) {
-            memset(cur, 0, sizeof(cur));
-            for (auto c: w) {
-                cur[c-'a'] += 1;
-            }
-            if (pre[0] == -1) {
-                memcpy(pre, cur, sizeof(pre));
-            } else {
-                for (int i = 0; i < 26; i ++) {
-                    pre[i] = min(pre[i], cur[i]);
-                }
+        int n = words.size(), i, j, mn;
+        vector<vector<int>> cnt(n, vector<int>(26));
+        vector<string> ans;
+        for (i = 0; i < n; i ++) {
+            for (j = 0; j < words[i].length(); j ++) {
+                cnt[i][words[i][j]-'a'] += 1;
             }
         }
-        vector<string> ans;
-        for (int i = 0; i < 26; i ++) {
-            while (pre[i]) {
-                ans.push_back(string(1, i+'a'));
-                pre[i] -= 1;
+        for (j = 0; j < 26; j ++) {
+            mn = INT_MAX;
+            for (i = 0; i < n; i ++) {
+                mn = min(mn, cnt[i][j]);
+            }
+            while (mn) {
+                ans.push_back(string(1, j+'a'));
+                mn -= 1;
             }
         }
         return ans;
