--- a/algorithm/LeetCode/[Easy] 2099. Find Subsequence of Length K With the Largest Sum.md
+++ b/algorithm/LeetCode/[Easy] 2099. Find Subsequence of Length K With the Largest Sum.md
@@ -63,3 +63,32 @@ class Solution:
         
         return result
 ```
+
+**Solution 2: (Sort, two level sort)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 13.80 MB, Beats 78.54%
+```
+```c++
+class Solution {
+public:
+    vector<int> maxSubsequence(vector<int>& nums, int k) {
+        int n = nums.size(), i;
+        vector<pair<int,int>> dp;
+        vector<int> ans;
+        for (i = 0; i < n; i ++) {
+            dp.push_back({i, nums[i]});
+        }
+        sort(dp.begin(), dp.end(), [](auto &pa, auto &pb){
+            return pa.second > pb.second;
+        });
+        sort(dp.begin(), dp.begin()+k, [](auto &pa, auto &pb){
+            return pa.first < pb.first;
+        });
+        for (i = 0; i < k; i ++) {
+            ans.push_back(dp[i].second);
+        }
+        return ans;
+    }
+};
+```
