--- a/algorithm/LeetCode/[Easy] 2200. Find All K-Distant Indices in an Array.md
+++ b/algorithm/LeetCode/[Easy] 2200. Find All K-Distant Indices in an Array.md
@@ -53,27 +53,30 @@ class Solution:
         return ans
 ```
 
-**Solution 2: (Two Pointers)**
+**Solution 2: (Sliding Window)**
 ```
-Runtime: 4 ms
-Memory Usage: 10.6 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 14.57 MB, Beats 90.46%
 ```
 ```c++
 class Solution {
 public:
     vector<int> findKDistantIndices(vector<int>& nums, int key, int k) {
-        int N = nums.size();
-        vector<int> ans, idx;
-        for (int i = 0; i < N; ++i){
-            if (nums[i] == key) idx.push_back(i); // `idx` is a list of indices whose corresponding value is `key`.
-        }
-        for (int i = 0, j = 0; i < N && j < idx.size(); ++i) {
-            if (i < idx[j] - k) continue; // If `i` is not yet in range of the next `key` element at `idx[j]`, skip.
-            while (j < idx.size() && i > idx[j] + k) ++j; // While `i > idx[j] + k`, keep incrementing `j` to bring `idx[j]` in range of `i`.
-            if (j < idx.size() && i <= idx[j] + k && i >= idx[j] - k) ans.push_back(i); // add `i` to the answer if `idx[j] - k <= i <= idx[j] + k`.
+        int n = nums.size(), i, right = 0, cnt = 0;
+        vector<int> ans;
+        for (i = 0; i < n; i ++) {
+            while (right < n && right - i <= k) {
+                cnt += nums[right] == key;
+                right += 1;
+            }
+            if (i - k - 1 >= 0) {
+                cnt -= nums[i - k - 1] == key;
+            }
+            if (cnt) {
+                ans.push_back(i);
+            }
         }
         return ans;
     }
 };
 ```
-
