--- a/algorithm/LeetCode/[Hard] 2040. Kth Smallest Product of Two Sorted Arrays.md
+++ b/algorithm/LeetCode/[Hard] 2040. Kth Smallest Product of Two Sorted Arrays.md
@@ -88,3 +88,122 @@ class Solution:
 
         return beg + 1
 ```
+
+**Solution 2: (Binary Search, O(n1 log n2 log C))**
+```
+Runtime: 788 ms, Beats 6.04%
+Memory: 98.17 MB, Beats 41.69%
+```
+```c++
+class Solution {
+    int check(vector<int>& nums2, long long x1, long long v) {
+        int n2 = nums2.size();
+        int left = 0, right = n2 - 1, mid;
+        while (left <= right) {
+            mid = left + (right - left)/2;
+            if (x1 >= 0 && nums2[mid] * x1 <= v ||
+                x1 < 0 && nums2[mid] * x1 > v) {
+                left = mid + 1;
+            } else {
+                right = mid - 1;
+            }
+        }
+        if (x1 >= 0) {
+            return left;
+        } else {
+            return n2 - left;
+        }
+    }
+public:
+    long long kthSmallestProduct(vector<int>& nums1, vector<int>& nums2, long long k) {
+        int n1 = nums1.size();
+        long long left = -1e10, right = 1e10, mid, cnt = 0, ans;
+        while (left <= right) {
+            mid = left + (right - left)/2;
+            cnt = 0;
+            for (int i = 0; i < n1; i++) {
+                cnt += check(nums2, nums1[i], mid);
+            }
+            if (cnt < k) {
+                left = mid + 1;
+            } else {
+                ans = mid;
+                right = mid - 1;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Binary Search + Divide and Conquer, O((n1 + n2) log C))**
+
+    nums1 = [-2,-1,0,1,2], nums2 = [-3,-1,2,4,5], k = 3
+                   ^p1                      ^p2
+case1 - -    ^i1 ->                  <- ^i2
+case1 + +          ^i1 ->                  <- ^i2
+case3 - +    ^i1 ->                         ^i2 ->
+case4 + -           ^i1 ->           ^i2 ->
+
+```
+Runtime: 116 ms, Beats 84.59%
+Memory: 98.02 MB, Beats 70.09%
+```
+```c++
+class Solution {
+public:
+    long long kthSmallestProduct(vector<int>& nums1, vector<int>& nums2, long long k) {
+        int n1 = nums1.size(), n2 = nums2.size();
+        int pos1 = 0, pos2 = 0;
+        while (pos1 < n1 && nums1[pos1] < 0) {
+            pos1++;
+        }
+        while (pos2 < n2 && nums2[pos2] < 0) {
+            pos2++;
+        }
+        long long left = -1e10, right = 1e10;
+        while (left <= right) {
+            long long mid = (left + right) / 2;
+            long long count = 0;
+            for (int i1 = 0, i2 = pos2 - 1; i1 < pos1 && i2 >= 0;) {
+                if (static_cast<long long>(nums1[i1]) * nums2[i2] > mid) {
+                    i1++;
+                } else {
+                    count += pos1 - i1;
+                    i2--;
+                }
+            }
+            for (int i1 = pos1, i2 = n2 - 1; i1 < n1 && i2 >= pos2;) {
+                if (static_cast<long long>(nums1[i1]) * nums2[i2] > mid) {
+                    i2--;
+                } else {
+                    count += i2 - pos2 + 1;
+                    i1++;
+                }
+            }
+            for (int i1 = 0, i2 = pos2; i1 < pos1 && i2 < n2;) {
+                if (static_cast<long long>(nums1[i1]) * nums2[i2] > mid) {
+                    i2++;
+                } else {
+                    count += n2 - i2;
+                    i1++;
+                }
+            }
+            for (int i1 = pos1, i2 = 0; i1 < n1 && i2 < pos2;) {
+                if (static_cast<long long>(nums1[i1]) * nums2[i2] > mid) {
+                    i1++;
+                } else {
+                    count += n1 - i1;
+                    i2++;
+                }
+            }
+            if (count < k) {
+                left = mid + 1;
+            } else {
+                right = mid - 1;
+            }
+        }
+        return left;
+    }
+};
+```
