update LeetCode Biweekly Contest 160

--- a/algorithm/LeetCode/[Easy] 1394. Find Lucky Integer in an Array.md
+++ b/algorithm/LeetCode/[Easy] 1394. Find Lucky Integer in an Array.md
@@ -56,3 +56,27 @@ class Solution:
     def findLucky(self, arr: List[int]) -> int:
         return max([k for k, v in collections.Counter(arr).items() if k == v] or [-1])
 ```
+
+**Solution 2: (Counter)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 14.12 MB, Beats 5.42%
+````
+```c++
+class Solution {
+public:
+    int findLucky(vector<int>& arr) {
+        int i, cnt[501] = {0};
+        for (auto &a: arr) {
+            cnt[a] += 1;
+        }
+        for (i = 500; i; i--) {
+            if (cnt[i] == i) {
+                return i;
+            }
+        }
+        return -1;
+    }
+};
+
+```
