--- a/algorithm/LeetCode/[Easy] 3304. Find the K-th Character in String Game I.md
+++ b/algorithm/LeetCode/[Easy] 3304. Find the K-th Character in String Game I.md
@@ -101,3 +101,36 @@ public:
     }
 };
 ```
+
+**Solution 3: (Math)**
+
+    1   2    3     4         5
+    1  10   11   100       101
+    a  ab  abb  abbc  abbcbccd
+    ^   ^    ^     ^      ^
+
+    k' = k - 2^i       2^i    k = 2^i + a
+                        ^^^^^^^
+                           a
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 7.76 MB, Beats 96.34%
+```
+```c++
+class Solution {
+public:
+    char kthCharacter(int k) {
+        int ans = 0;
+        int t;
+        while (k != 1) {
+            t = __lg(k);
+            if ((1 << t) == k) {
+                t--;
+            }
+            k = k - (1 << t);
+            ans++;
+        }
+        return 'a' + ans;
+    }
+};
+```
