--- a/algorithm/LeetCode/[Easy] 3330. Find the Original Typed String I.md
+++ b/algorithm/LeetCode/[Easy] 3330. Find the Original Typed String I.md
@@ -49,19 +49,16 @@ Output: 4
 ---
 **Solution 1: (Greedy)**
 ```
-Runtime: 0 ms
-Memory: 8.57 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.68 MB, Beats 96.36%
 ```
 ```c++
 class Solution {
 public:
     int possibleStringCount(string word) {
-        int ans = 1;
-        char pre = ' ';
-        for (auto c: word) {
-            if (c != pre) {
-                pre = c;
-            } else {
+        int n = word.length(), i, ans = 1;
+        for (i = 1; i < n; i ++) {
+            if (word[i] == word[i-1]) {
                 ans += 1;
             }
         }
