--- a/algorithm/LeetCode/[Hard] 3307. Find the K-th Character in String Game II.md
+++ b/algorithm/LeetCode/[Hard] 3307. Find the K-th Character in String Game II.md
@@ -55,7 +55,50 @@ Appends "bbccbbcc" to "aabbaabb", word becomes "aabbaabbbbccbbcc".
 
 # Submissions
 ---
-**Solution 1: (Bit Manipulation, O(log(k)))**
+**Solution 1: (Bit Manipulation)**
+
+    a a b b a a b b b b c c b b c c
+                    ^^^^^^^^^^^^^^^
+            ^^^^^^^         1
+        ^^^^   0
+      ^  1
+      0
+    1010
+r  10  2
+i   3  1
+ans 1  
+>   1  0  1  1
+    ^i    ^i
+r   11  3  1
+i    3  1  0
+ans  1  2  
+>   1100
+    1010
+>   1101
+>   1110
+
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 28.46 MB, Beats 40.51%
+```
+```c++
+class Solution {
+public:
+    char kthCharacter(long long k, vector<int>& operations) {
+        long long r = k-1;
+        int i, ans = 0;
+        while (r) {
+            i = __lg(r);
+            r = r % (1LL<<i);
+            ans += operations[i];
+        }
+        return ans%26 + 'a';
+    }
+};
+```
+
+**Solution 2: (Bit Manipulation, O(log(k)))**
 
 We need to find how many times the character a mutated to get to the position k.
 
@@ -84,3 +127,4 @@ public:
     }
 };
 ```
+
