--- a/algorithm/LeetCode/[Hard] 1095. Find in Mountain Array.md
+++ b/algorithm/LeetCode/[Hard] 1095. Find in Mountain Array.md
@@ -232,3 +232,63 @@ int findInMountainArray(int target, MountainArray* mountainArr) {
         return -1;
 }
 ```
+
+**Solution 4: (Binary Search)**
+```
+Runtime: 4 ms, Beats 46.11%
+Memory: 9.94 MB, Beats 11.82%
+```
+```c++
+/**
+ * // This is the MountainArray's API interface.
+ * // You should not implement it, or speculate about its implementation
+ * class MountainArray {
+ *   public:
+ *     int get(int index);
+ *     int length();
+ * };
+ */
+
+class Solution {
+public:
+    int findInMountainArray(int target, MountainArray &mountainArr) {
+        int n = mountainArr.length(), left = 0, right = n-1, mid, mid2, a, b;
+        while (left <= right) {
+            mid = left + (right-left)/2;
+            a = mountainArr.get(mid);
+            b = mountainArr.get(mid+1);
+            if (a < b) {
+                left = mid + 1;
+            } else {
+                right = mid - 1;
+            }
+        }
+        mid2 = left;
+        left = 0, right = mid2;
+        while (left <= right) {
+            mid = left + (right -left)/2;
+            a = mountainArr.get(mid);
+            if (a == target) {
+                return mid;
+            } else if (a < target) {
+                left = mid + 1;
+            } else {
+                right = mid - 1;
+            }
+        }
+        left = mid2 + 1, right = n-1;
+        while (left <= right) {
+            mid = left + (right - left)/2;
+            a = mountainArr.get(mid);
+            if (a == target) {
+                return mid;
+            } else if (a < target) {
+                right = mid - 1;
+            } else {
+                left = mid + 1;
+            }
+        }
+        return -1;
+    }
+};
+```
