update LeetCode Weekly Contest 458

--- a/algorithm/LeetCode/[Hard] 2402. Meeting Rooms III.md
+++ b/algorithm/LeetCode/[Hard] 2402. Meeting Rooms III.md
@@ -181,3 +181,52 @@ public:
     }
 };
 ```
+
+**Solution 4: (Heap)**
+```
+Runtime: 74 ms, Beats 65.07%
+Memory: 98.20 MB, Beats 56.92%
+```
+```c++
+class Solution {
+public:
+    int mostBooked(int n, vector<vector<int>>& meetings) {
+        int m = meetings.size(), i, a = 0, ans;
+        long long t = -1;
+        sort(meetings.begin(), meetings.end());
+        priority_queue<array<long long,2>, vector<array<long long,2>>, greater<>> pq;
+        priority_queue<int,vector<int>,greater<>> free;
+        vector<int> cnt(n);
+        for (i = 1; i < n; i ++) {
+            free.push(i);
+        }
+        pq.push({meetings[0][1], 0});
+        cnt[0] = 1;
+        for (i = 1; i < m; i ++) {
+            t = max(t, (long long)meetings[i][0]);
+            if (!free.size()) {
+                auto [ct, j] = pq.top();
+                pq.pop();
+                t = max(t, ct);
+                free.push(j);
+            }
+            while (pq.size() && pq.top()[0] <= t) {
+                auto [_, j] = pq.top();
+                pq.pop();
+                free.push(j);
+            }
+            auto nj = free.top();
+            free.pop();
+            pq.push({t + (meetings[i][1] - meetings[i][0]), nj});
+            cnt[nj] += 1;
+        }
+        for (i = 0; i < n; i ++) {
+            if (cnt[i] > a) {
+                a = cnt[i];
+                ans = i;
+            }
+        }
+        return ans;
+    }
+};
+```
