--- a/algorithm/LeetCode/[Hard] 1751. Maximum Number of Events That Can Be Attended II.md
+++ b/algorithm/LeetCode/[Hard] 1751. Maximum Number of Events That Can Be Attended II.md
@@ -123,3 +123,40 @@ public:
     }
 };
 ```
+
+**Solution 4: (DP Bottom-Up)**
+
+     ---1--
+        ---3--
+  ----4-    
+    1  2  3  4
+    ----------
+    [1,2] [2,3] [3,4]
+             ^
+       <-   n
+k   0  1  2  3
+0   0  0  0  0
+1 | 4  3  3  0
+2 v 7  3  3  0
+
+```
+Runtime: 153 ms, Beats 58.91%
+Memory: 121.66 MB, Beats 76.37%
+```
+```c++
+class Solution {
+public:
+    int maxValue(vector<vector<int>>& events, int k) {
+        int n = events.size(), i, j, ck;
+        vector<vector<int>> dp(n+1, vector<int>(k+1));
+        sort(events.begin(), events.end());
+        for (i = n-1; i >= 0; i --) {
+            j = upper_bound(events.begin(), events.end(), vector<int>({events[i][1], INT_MAX, INT_MAX})) - events.begin();
+            for (ck = 1; ck <= k; ck ++) {
+                dp[i][ck] = max(dp[i+1][ck], dp[j][ck-1] + events[i][2]);
+            }
+        }
+        return dp[0][k];
+    }
+};
+```
