update LeetCode Biweekly Contest 161

--- a/algorithm/LeetCode/[Easy] 1290. Convert Binary Number in a Linked List to Integer.md
+++ b/algorithm/LeetCode/[Easy] 1290. Convert Binary Number in a Linked List to Integer.md
@@ -93,3 +93,32 @@ int getDecimalValue(struct ListNode* head){
     return ans;
 }
 ```
+
+**Solution 2: (Bit Manipulation, Linked List)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 10.64 MB, Beats 39.86%
+```
+```c++
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+class Solution {
+public:
+    int getDecimalValue(ListNode* head) {
+        int ans = 0;
+        while (head) {
+            ans = (ans<<1) + head->val;
+            head = head->next;
+        }
+        return ans;
+    }
+};
+```
