--- a/algorithm/LeetCode/[Hard] 1948. Delete Duplicate Folders in System.md
+++ b/algorithm/LeetCode/[Hard] 1948. Delete Duplicate Folders in System.md
@@ -138,3 +138,188 @@ class Solution:
 
         return dfs_collect_paths(tree, [], [])
 ```
+
+**Solution 2: (Trie)**
+
+    paths = [["a"],["c"],["d"],["a","b"],["c","b"],["d","a"]]
+
+                /
+            /   |   \
+           v    v    v
+           a    c    d
+           |    |    |
+           v    v    v 
+           b    b    a
+
+    -> a,  -> b
+       c   -> b
+       d   -> a
+
+freq:
+    a(b())c(b())d(a()),1
+    a(),1
+    b(),2
+
+
+    paths = [["a"],["c"],["d"],["a","b"],["c","b"],["d","a"]]
+
+                    /
+                /   |   \
+               v    v    v
+               a    c    w
+               |    |    |
+               v    v    v
+               b    b    y
+               x
+               |
+               v
+               y
+
+
+rreq:
+    b(x(y())),1
+    a(b(x(y())))c(b())w(y()),1
+    x(y()),1
+    b(),1
+    y(),2
+
+```
+Runtime: 167 ms, Beats 92.96%
+Memory: 269.07 MB, Beats 69.01%
+```
+```c++
+struct Trie {
+    // current node structure's serialized representation
+    string serial;
+    // current node's child nodes
+    unordered_map<string, Trie*> children;
+};
+
+class Solution {
+public:
+    vector<vector<string>> deleteDuplicateFolder(vector<vector<string>>& paths) {
+        // root node
+        Trie* root = new Trie();
+
+        for (const vector<string>& path : paths) {
+            Trie* cur = root;
+            for (const string& node : path) {
+                if (!cur->children.count(node)) {
+                    cur->children[node] = new Trie();
+                }
+                cur = cur->children[node];
+            }
+        }
+
+        // hash table records the occurrence times of each serialized
+        // representation
+        unordered_map<string, int> freq;
+        // post-order traversal based on depth-first search, calculate the
+        // serialized representation of each node structure
+        function<void(Trie*)> construct = [&](Trie* node) {
+            // if it is a leaf node, then the serialization is represented as an
+            // empty string, and no operation is required.
+            if (node->children.empty()) {
+                return;
+            }
+
+            vector<string> v;
+            // if it is not a leaf node, the serialization representation of the
+            // child node structure needs to be calculated first.
+            for (const auto& [folder, child] : node->children) {
+                construct(child);
+                v.push_back(folder + "(" + child->serial + ")");
+            }
+            // to prevent issues with order, sorting is needed
+            sort(v.begin(), v.end());
+            for (string& s : v) {
+                node->serial += move(s);
+            }
+            // add to hash table
+            ++freq[node->serial];
+        };
+
+        construct(root);
+
+        vector<vector<string>> ans;
+        // record the path from the root node to the current node.
+        vector<string> path;
+
+        function<void(Trie*)> operate = [&](Trie* node) {
+            // if the serialization appears more than once in the hash table, it
+            // needs to be deleted.
+            if (freq[node->serial] > 1) {
+                return;
+            }
+            // otherwise add the path to the answer
+            if (!path.empty()) {
+                ans.push_back(path);
+            }
+            for (const auto& [folder, child] : node->children) {
+                path.push_back(folder);
+                operate(child);
+                path.pop_back();
+            }
+        };
+
+        operate(root);
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Trie, DFS, Backtracking, serialize child to compare)**
+```
+Runtime: 214 ms, Beats 70.42%
+Memory: 259.06 MB, Beats 77.46%
+```
+```c++
+class Solution {
+    struct TrieNode {
+        string str;
+        map<string, TrieNode*> child;
+    };
+    string dfs(TrieNode* node, unordered_map<string,int> &cnt) {
+        if (node->child.size() == 0) {
+            return "";
+        }
+        for (auto &[cs, cnode]: node->child) {
+            node->str += cs + "," + move(dfs(cnode, cnt)) + ",";
+        }
+        cnt[node->str] += 1;
+        return node->str;
+    }
+    void bt(TrieNode *node, unordered_map<string,int> &cnt, vector<string> &p, vector<vector<string>> &ans) {
+        if (cnt[node->str] > 1) {
+            return;
+        }
+        if (p.size()) {
+            ans.push_back(p);
+        }
+        for (auto &[cs, cnode]: node->child) {
+            p.push_back(cs);
+            bt(cnode, cnt, p, ans);
+            p.pop_back();
+        }
+    }
+public:
+    vector<vector<string>> deleteDuplicateFolder(vector<vector<string>>& paths) {
+        TrieNode *root = new TrieNode(), *node;
+        unordered_map<string,int> cnt;
+        vector<string> p;
+        vector<vector<string>> ans;
+        for (auto &path: paths) {
+            node = root;
+            for (auto &f: path) {
+                if (!node->child.count(f)) {
+                    node->child[f] = new TrieNode();
+                }
+                node = node->child[f];
+            }
+        }
+        dfs(root, cnt);
+        bt(root, cnt, p, ans);
+        return ans;
+    }
+};
+```
