--- a/algorithm/LeetCode/[Hard] 2163. Minimum Difference in Sums After Removal of Elements.md
+++ b/algorithm/LeetCode/[Hard] 2163. Minimum Difference in Sums After Removal of Elements.md
@@ -87,35 +87,47 @@ class Solution:
 ```
 
 **Solution 2: (Heap)**
+
+    7, 9, 5, 8, 1, 3
+       x        x
+b        13 11  4
+a     16 12 12
+       3  1  8
+
 ```
-Runtime: 364 ms
-Memory Usage: 139.6 MB
+Runtime: 131 ms, Beats 85.05%
+Memory: 144.02 MB, Beats 85.05%
 ```
 ```c++
 class Solution {
 public:
     long long minimumDifference(vector<int>& nums) {
-        priority_queue<int> L; // storing the smallest N digits in the first part
-        priority_queue<int,vector<int>, greater<>> R; // storing the greatest N digits in the right part
-        long N = nums.size() / 3, left = 0, right = 0, ans = LLONG_MAX;
-        vector<long> tmp(nums.size());
-        for (int i = nums.size() - 1; i >= N; --i) { // calculate the greatest N digits in the right part
-            R.push(nums[i]);
-            right += nums[i];
-            if (R.size() > N) {
-                right -= R.top();
-                R.pop();
+        int n = nums.size(), k = n/3, i;
+        long long a = 0, b = 0, ans = LONG_LONG_MAX;
+        vector<long long> dp(n);
+        priority_queue<int> left;
+        priority_queue<int,vector<int>,greater<>> right;
+        for (i = n-1; i >= k; i --) {
+            right.push(nums[i]);
+            b += nums[i];
+            if (right.size() > k) {
+                b -= right.top();
+                right.pop();
             }
-            if (R.size() == N) tmp[i] = right; // `tmp[i]` is the maximum sum of `N` digits in `A[i:]`
+            if (right.size() == k) {
+                dp[i] = b;
+            }
         }
-        for (int i = 0; i < nums.size() - N; ++i) {
-            L.push(nums[i]);
-            left += nums[i];
-            if (L.size() > N) {
-                left -= L.top();
-                L.pop();
+        for (i = 0; i < n-k; i++) {
+            left.push(nums[i]);
+            a += nums[i];
+            if (left.size() > k) {
+                a -= left.top();
+                left.pop();
             }
-            if (L.size() == N) ans = min(ans, left - tmp[i + 1]);
+            if (left.size() == k) {
+                ans = min(ans, a - dp[i+1]);
+            }
         }
         return ans;
     }
