--- a/algorithm/LeetCode/[Easy] 3136. Valid Word.md
+++ b/algorithm/LeetCode/[Easy] 3136. Valid Word.md
@@ -59,30 +59,30 @@ This word contains a '$' character and does not have a consonant.
 ---
 **Solution 1: (Brute Force)**
 ```
-Runtime: 5 ms
-Memory: 7.51 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.08 MB, Beats 33.01%
 ```
 ```c++
 class Solution {
 public:
     bool isValid(string word) {
-        if (word.size() < 3) {
+        string vowel = "aeiouAEIOU";
+        int v = 0, nv = 0;
+        if (word.length() < 3) {
             return false;
         }
-        int mask = 0;
-        for (auto c: word) {
-            if (c >= '0' && c <= '9' || c >= 'a' && c <= 'z' || c >= 'A' && c <= 'Z') {
-                mask |= 1;
+        for (auto &c: word) {
+            if (isdigit(c)) {
+                continue;
+            } else if (vowel.find(c) != string::npos) {
+                v += 1;
+            } else if (isalpha(c)) {
+                nv += 1;
             } else {
                 return false;
             }
-            if (c == 'a' || c == 'A' || c == 'e' || c == 'E' || c == 'i' || c == 'I' || c == 'o' || c == 'O' || c == 'u' || c == 'U') {
-                mask |= 2;
-            } else if (c < '0' || c > '9') {
-                mask |= 4;
-            }
         }
-        return mask == 7;
+        return v && nv;
     }
 };
 ```
