--- a/algorithm/LeetCode/[Hard] 1096. Brace Expansion II.md
+++ b/algorithm/LeetCode/[Hard] 1096. Brace Expansion II.md
@@ -94,5 +94,77 @@ class Solution:
             return sorted(expression.split(','))
         else:
             return [expression]
-        
+```
+
+**Solution 3: (Stack, Set)**
+```
+Runtime: 13 ms, Beats 32.79%
+Memory: 16.41 MB, Beats 51.64%
+```
+```c++
+class Solution {
+public:
+    vector<string> braceExpansionII(string expression) {
+        expression += "#";
+        stack<pair<vector<string>, vector<string>>> stk;
+        set<string> st, nst;
+        string s = "";
+        stk.push({{}, {}});
+        for (auto c: expression) {
+            if (isalpha(c)) {
+                if (st.size()) {
+                    for (auto &ss: st) {
+                        nst.insert(ss + c);
+                    }
+                    st.clear();
+                    swap(st, nst);
+                } else {
+                    s += c;
+                }
+            } else if (c == ',') {
+                if (s != "") {
+                    st.insert(s);
+                }
+                while (st.size()) {
+                    stk.top().second.push_back(*st.begin());
+                    st.erase(st.begin());
+                }
+                s = "";
+            } else if (c == '{') {
+                if (s != "") {
+                    st.insert(s);
+                }
+                stk.push({{}, {}});
+                while (st.size()) {
+                    stk.top().first.push_back(*st.begin());
+                    st.erase(st.begin());
+                }
+                s = "";
+            } else {
+                if (s != "") {
+                    st.insert(s);
+                }
+                while (st.size()) {
+                    stk.top().second.push_back(*st.begin());
+                    st.erase(st.begin());
+                }
+                auto [lefts, rights] = stk.top();
+                stk.pop();
+                if (lefts.size() == 0) {
+                    for (auto right: rights) {
+                        st.insert(right);
+                    }
+                } else {
+                    for (auto left: lefts) {
+                        for (auto right: rights) {
+                            st.insert(left + right);
+                        }
+                    }
+                }
+                s = "";
+            }
+        }
+        return vector<string>(st.begin(), st.end());
+    }
+};
 ```
