--- a/algorithm/LeetCode/[Hard] 1377. Frog Position After T Seconds.md
+++ b/algorithm/LeetCode/[Hard] 1377. Frog Position After T Seconds.md
@@ -102,3 +102,52 @@ class Solution:
         
         return res
 ```
+
+**Solution 3: (DFS)**
+```
+Runtime: 4 ms, Beats 77.66%
+Memory: 19.96 MB, Beats 68.85%
+```
+```c++
+class Solution {
+    bool dfs(int u, int a, double p, double &ans, int t, int target, vector<int> &visited, vector<vector<int>> &g) {
+        if (t == 0) {
+            if (u == target) {
+                ans = p;
+                return true;
+            }
+            return false;
+        } else if (u == target && all_of(g[u].begin(), g[u].end(), [&](int &i){return visited[i];})) {
+            ans = p;
+            return true;
+        }
+        visited[u] = 1;
+        t -= 1;
+        if (a == -1) {
+            p /= g[u].size();
+        } else {
+            p /= (g[u].size()-1);
+        }
+        for (auto v: g[u]) {
+            if (!visited[v]) {
+                if (dfs(v, u, p, ans, t, target, visited, g)) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+public:
+    double frogPosition(int n, vector<vector<int>>& edges, int t, int target) {
+        vector<vector<int>> g(n+1);
+        vector<int> visited(n+1);
+        double ans;
+        for (auto &e: edges) {
+            g[e[0]].push_back(e[1]);
+            g[e[1]].push_back(e[0]);
+        }
+        dfs(1, -1, 1, ans, t, target, visited, g);
+        return ans;
+    }
+};
+```
