update LeetCode Weekly Contest 460

--- a/algorithm/LeetCode/[Easy] 3487. Maximum Unique Subarray Sum After Deletion.md
+++ b/algorithm/LeetCode/[Easy] 3487. Maximum Unique Subarray Sum After Deletion.md
@@ -55,23 +55,25 @@ Delete the elements nums[2] == -1 and nums[3] == -2, and select the subarray [2,
 **Solution 1: (Array)**
 ```
 Runtime: 0 ms, Beats 100.00%
-Memory: 29.29 MB, Beats 0.00%
+Memory: 29.81 MB, Beats 12.16%
 ```
 ```c++
 class Solution {
 public:
     int maxSum(vector<int>& nums) {
-        int M=*max_element(nums.begin(), nums.end());
-        if (M<=0) return M;
-        bitset<101> seen=0;
-        int sum=0;
-        for(int x: nums){
-            if (x>=0 && !seen[x]){
-                sum+=x;
-                seen[x]=1;
+        int n = nums.size(), i, a, b = 0, cnt[101] = {0};
+        a = *max_element(nums.begin(), nums.end());
+        for (i = 0; i < n; i ++) {
+            if (nums[i] < 0 || cnt[nums[i]]) {
+                continue;
             }
+            b += nums[i];
+            cnt[nums[i]] += 1;
         }
-        return sum;
+        if (b) {
+            return max(a, b);
+        }
+        return a;
     }
 };
 ```
