--- a/algorithm/LeetCode/[Hard] 2322. Minimum Score After Removals on a Tree.md
+++ b/algorithm/LeetCode/[Hard] 2322. Minimum Score After Removals on a Tree.md
@@ -120,119 +120,117 @@ class Solution:
         return ans
 ```
 
-**Solution 2: (DFS)**
+**Solution 2: (DFS, 2 DFS, Brute Force)**
 ```
-Runtime: 876 ms
-Memory Usage: 17.2 MB
+Runtime: 187 ms, Beats 54.76%
+Memory: 18.27 MB, Beats 88.89%
 ```
 ```c++
 class Solution {
-    unordered_set<int> v[1002];
-    bool vis[1002];
-
-    int ans = INT_MAX, comp_1, comp_2, comp_3;
-
-    int dfs(int i, vector<int> &a)
-    {
-        int curr = a[i];
-
-        vis[i] = true;
-
-        for (auto x : v[i])
-        {
-            if (!vis[x])
-            {
-                curr = curr ^ dfs(x, a);
-            }
-        }
-
-        return curr;
-    }
-
-    int dfs1(int i, int j, vector<int> &a)
-    {
-        vis[i] = true;
-
-        int curr = a[i];
-
-        for (auto x : v[i])
-        {
-            if (!vis[x])
-            {
-                int res = dfs1(x, j, a);
-
-                comp_2 = res;
-                comp_3 = j ^ res;
-
-                ans = min(ans, max(comp_1, max(comp_2, comp_3)) - min(comp_1, min(comp_2, comp_3)));
-
-                curr = curr ^ res;
-            }
-        }
-
-        return curr;
+    int calc(int part1, int part2, int part3) {
+        return max(part1, max(part2, part3)) - min(part1, min(part2, part3));
     }
 public:
     int minimumScore(vector<int>& nums, vector<vector<int>>& edges) {
-        for (auto x : edges)
-        {
-            v[x[0]].insert(x[1]);
-            v[x[1]].insert(x[0]);
+        int n = nums.size();
+        vector<vector<int>> e(n);
+        for (auto &v : edges) {
+            e[v[0]].push_back(v[1]);
+            e[v[1]].push_back(v[0]);
         }
 
-        int val = 0;
-
-        for (auto x : nums)
-        {
-            val = val ^ x;
+        int sum = 0;
+        for (int x : nums) {
+            sum ^= x;
         }
 
-        ans = INT_MAX;
+        int res = INT_MAX;
+        function<int(int, int, int, int)> dfs2 = [&](int x, int f, int oth,
+                                                     int anc) {
+            int son = nums[x];
+            for (auto &y : e[x]) {
+                if (y == f) {
+                    continue;
+                }
+                son ^= dfs2(y, x, oth, anc);
+            }
+            if (f == anc) {
+                return son;
+            }
+            res = min(res, calc(oth, son, sum ^ oth ^ son));
+            return son;
+        };
 
-        for (auto x : edges)
-        {
-            v[x[0]].erase(x[1]);
-            v[x[1]].erase(x[0]);
-
-            for (int i = 0; i <= nums.size(); i++)
-            {
-                vis[i] = false;
+        function<int(int, int)> dfs = [&](int x, int f) {
+            int son = nums[x];
+            for (auto &y : e[x]) {
+                if (y == f) {
+                    continue;
+                }
+                son ^= dfs(y, x);
             }
 
-            comp_1 = dfs(0, nums);
-
-            int pos;
-
-            for (int i = 0; i < nums.size(); i++)
-            {
-                if (!vis[i])
-                {
-                    pos = i;
-                    dfs1(i, comp_1 ^ val, nums);
+            for (auto &y : e[x]) {
+                if (y == f) {
+                    dfs2(y, x, son, x);
                 }
             }
+            return son;
+        };
 
-            for (int i = 0; i <= nums.size(); i++)
-            {
-                vis[i] = false;
-            }
-
-            comp_1 = dfs(pos, nums);
-
-
-            for (int i = 0; i < nums.size(); i++)
-            {
-                if (!vis[i])
-                {
-                    dfs1(i, comp_1 ^ val, nums);
-                }
-            }
-
-            v[x[0]].insert(x[1]);
-            v[x[1]].insert(x[0]);
-        }
-
-        return ans;
+        dfs(0, -1);
+        return res;
     }
 };
 ```
+
+**Solution 3: (DFS, 2 post order, Brute Force)**
+```
+Runtime: 248 ms, Beats 46.03%
+Memory: 18.16 MB, Beats 91.27%
+```
+```c++
+class Solution {
+    int dfs2(int u, int p, vector<int> &nums, vector<vector<int>> &g, int anc, int a, int t, int &ans) {
+        int rst = nums[u];
+        for (auto &v: g[u]) {
+            if (v != p) {
+                rst ^= dfs2(v, u, nums, g, anc, a, t, ans);
+            }
+        }
+        if (p == anc) {
+            return rst;
+        }
+        ans = min(ans, max({a, rst, t^a^rst}) - min({a, rst, t^a^rst}));
+        return rst;
+    }
+    int dfs(int u, int p, vector<int> &nums, vector<vector<int>> &g, int t, int &ans) {
+        int rst = nums[u];
+        for (auto &v: g[u]) {
+            if (v != p) {
+                rst ^= dfs(v, u, nums, g, t, ans);
+            }
+        }
+        for (auto &v: g[u]) {
+            if (v == p) {
+                dfs2(v, u, nums, g, u, rst, t, ans);
+            }
+        }
+        return rst;
+    }
+public:
+    int minimumScore(vector<int>& nums, vector<vector<int>>& edges) {
+        int n = nums.size(), t = 0, ans = INT_MAX;
+        vector<vector<int>> g(n);
+        for (auto &e: edges) {
+            g[e[0]].push_back(e[1]);
+            g[e[1]].push_back(e[0]);
+        }
+        for (auto &num: nums) {
+            t ^= num;
+        }
+        dfs(0, -1, nums, g, t, ans);
+        return ans;
+    }
+};
+````
