--- a/algorithm/LeetCode/[Easy] 1957. Delete Characters to Make Fancy String.md
+++ b/algorithm/LeetCode/[Easy] 1957. Delete Characters to Make Fancy String.md
@@ -78,3 +78,28 @@ public:
     }
 };
 ```
+
+**Solution 3: (Two Pointers, In-Place)**
+```
+Runtime: 9 ms, Beats 98.00%
+Memory: 38.13 MB, Beats 98.20%
+```
+```c++
+class Solution {
+public:
+    string makeFancyString(string s) {
+        int n = s.size(), i = 0, j;
+        if (n < 2) {
+            return s;
+        }
+        for (j = 0; j < n; j ++) {
+            if (j >= 2 && s[i-1] == s[j] && s[i-2] == s[j]) {
+                continue;
+            }
+            s[i++] = s[j];
+        }
+        s.resize(i);
+        return s;
+    }
+};
+```
