--- a/algorithm/LeetCode/[Easy] 2210. Count Hills and Valleys in an Array.md
+++ b/algorithm/LeetCode/[Easy] 2210. Count Hills and Valleys in an Array.md
@@ -59,25 +59,35 @@ class Solution:
         return ans
 ```
 
-**Solution 2: (Two Pointers)**
+**Solution 2: (Two Pointers, try all solution)**
 ```
-Runtime: 4 ms
-Memory Usage: 8.9 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 12.12 MB, Beats 50.25%
 ```
 ```c++
 class Solution {
 public:
     int countHillValley(vector<int>& nums) {
-        int ans = 0, n = nums.size();
-        for(int i = 1; i < n; i++){
-            if(nums[i] == nums[i-1]) continue; //  same hill or valley
-            
-            int idx = i - 1, jdx = i + 1;
-            while(jdx < n && nums[jdx] == nums[i]) jdx++;
-            if(jdx == n) break; // no right neighbour found
-            
-            if(nums[idx] < nums[i] && nums[jdx] < nums[i]) ans++;
-            else if(nums[idx] > nums[i] && nums[jdx] > nums[i]) ans++;
+        int n = nums.size(), i, j = 2, k, ans = 0;
+        for (i = 1; i < n-1; i ++) {
+            if (nums[i] == nums[i-1]) {
+                continue;
+            }
+            while (j <= i) {
+                j += 1;
+            }
+            while (j < n && nums[j] == nums[i]) {
+                j += 1;
+            }
+            k = i - 1;
+            while (k >= 0 && nums[i] == nums[k]) {
+                k -= 1;
+            }
+            if (k >= 0 && j < n) {
+                if (nums[j] > nums[i] && nums[k] > nums[i] || nums[j] < nums[i] && nums[k] < nums[i]) {
+                    ans += 1;
+                }
+            }
         }
         return ans;
     }
