--- a/algorithm/LeetCode/[Hard] 3480. Maximize Subarrays After Removing One.md
+++ b/algorithm/LeetCode/[Hard] 3480. Maximize Subarrays After Removing One.md
@@ -138,3 +138,96 @@ public:
     }
 };
 ```
+
+**Solution 2: (Enumeration)**
+
+
+          ^i       ^j
+case1   ^ak                   ok
+casa2         ^ak     ^bk     ok  
+          ^^^^^^^^^^^^
+             valid
+                            ^bk2
+                      ^^^^^^
+                      delta max
+            ^ak  ^bk
+            --------   
+             bMin1 = smallest conflict range
+            ^ak       ^bk
+            -------------
+             bMin2 = second smallest 
+             
+
+        vvvv             x
+              vvvvvvv
+           vvvvvvvvvv
+        1  2  3  4  5
+              ^
+        -------------    x
+        -----------
+        -------
+        ----
+        -
+           -----------    x
+           -------
+           ----
+           -
+              --------    x
+              -----
+              -
+                 -----
+                 -
+                    -
+bMin1
+      1 2  
+      2    5
+      3       5
+      4          ~
+      5             ~
+bMin2
+      1
+      2
+      3
+      4
+      5
+
+rst     9  8  5  3  1 
+delCnt  3  0  1  0  0
+        ^
+```
+Runtime: 32 ms, Beats 93.22%
+Memory: 266.60 MB, Beats 83.05%
+```
+```c++
+typedef long long ll;
+class Solution {
+public:
+    long long maxSubarrays(int n, vector<vector<int>>& conflictingPairs) {
+        vector<int> bMin1(n + 1, INT_MAX), bMin2(n + 1, INT_MAX);
+        for (const auto& pair : conflictingPairs) {
+            int a = min(pair[0], pair[1]), b = max(pair[0], pair[1]);
+            if (bMin1[a] > b) {
+                bMin2[a] = bMin1[a];
+                bMin1[a] = b;
+            } else if (bMin2[a] > b) {
+                bMin2[a] = b;
+            }
+        }
+        long long res = 0;
+        int ib1 = n, b2 = INT_MAX;
+        vector<long long> delCount(n + 1, 0);
+        for (int i = n; i >= 1; i--) {
+            if (bMin1[ib1] > bMin1[i]) {
+                b2 = min(b2, bMin1[ib1]);
+                ib1 = i;
+            } else {
+                b2 = min(b2, bMin1[i]);
+            }
+            res += min(bMin1[ib1], n + 1) - i;
+            delCount[ib1] +=
+                min(min(b2, bMin2[ib1]), n + 1) - min(bMin1[ib1], n + 1);
+        }
+        return res + *max_element(delCount.begin(), delCount.end());
+    }
+};
+```
